--- a/src/app/view/table-main/table-main.component.html
+++ b/src/app/view/table-main/table-main.component.html
@@ -436,7 +436,7 @@
                       <div *ngIf="isTyproActive" class="full-page-textarea-container">
                         <div class="typroTextBox">
                           <div class="headerText">
-                            <div aria-label="Preview">การพิมพ์ข้อความ</div>
+                            <div aria-label="Preview">พิมพ์ข้อความ</div>
 
                           </div>
                           <angular-editor [placeholder]="'พิมพ์ข้อความที่นี้...'" [config]="editorConfig"
