--- a/src/app/layouts/auth-layout/register/register.component.css
+++ b/src/app/layouts/auth-layout/register/register.component.css
@@ -71,6 +71,10 @@
     display: flex;
     justify-content: flex-start;
   }
+  .text-upload{
+    display: flex;
+    flex-direction: column;
+  }
 
   .uploadPicture{
     position: relative;
@@ -93,7 +97,11 @@
     opacity: 0;
   }
   .profile-image-container {
-    margin-top: 20px;
+    position: relative;
+    border: 1px solid  #525252;
+    border-radius: 5px;
+    border-style:dashed ;
+    margin: 20px;
   }
   .profile-image {
     width: 150px; /* Adjust size as needed */
@@ -102,7 +110,13 @@
     border-radius: 50%; /* Makes the image circular */
     border: 2px solid #ddd; /* Optional border around the image */
   }
-
+  .positionTrashCan{
+    position: absolute;
+    top: 10px;
+    right: 10px;
+    cursor: pointer;
+    color: red;
+  }
   /*invalidate style*/
   .error-text{
     font-size: 14px;
