--- a/src/app/view/reportuser/reportprofile/reportprofile.component.css
+++ b/src/app/view/reportuser/reportprofile/reportprofile.component.css
@@ -89,6 +89,13 @@
 ::placeholder{
   font-family: 'Sarabun',sans-serif;
 }
+
+:host ::ng-deep .table.dataTable>thead .sorting:before, table.dataTable>thead .sorting_asc:before, table.dataTable>thead .sorting_desc:before, table.dataTable>thead .sorting_asc_disabled:before, table.dataTable>thead .sorting_desc_disabled:before{
+  display: none;
+} 
+:host ::ng-deep .table.dataTable>thead .sorting:after, table.dataTable>thead .sorting_asc:after, table.dataTable>thead .sorting_desc:after, table.dataTable>thead .sorting_asc_disabled:after, table.dataTable>thead .sorting_desc_disabled:after{
+  display: none;
+}
 :host ::ng-deep .form-control{
   background-image: linear-gradient(to top, #000000 2px, rgba(156, 39, 176, 0) 2px), linear-gradient(to top, #d2d2d2 1px, rgba(210, 210, 210, 0) 1px);
 }
