--- a/src/app/view/reportuser/reportuser.component.css
+++ b/src/app/view/reportuser/reportuser.component.css
@@ -37,6 +37,13 @@
     width: 50px; /* Adjust the width as needed */
     text-align: center;
   }
+
+  :host ::ng-deep .table.dataTable>thead .sorting:before, table.dataTable>thead .sorting_asc:before, table.dataTable>thead .sorting_desc:before, table.dataTable>thead .sorting_asc_disabled:before, table.dataTable>thead .sorting_desc_disabled:before{
+    display: none;
+  } 
+  :host ::ng-deep .table.dataTable>thead .sorting:after, table.dataTable>thead .sorting_asc:after, table.dataTable>thead .sorting_desc:after, table.dataTable>thead .sorting_asc_disabled:after, table.dataTable>thead .sorting_desc_disabled:after{
+    display: none;
+  }
   :host ::ng-deep .dataTables_wrapper .dataTables_paginate .paginate_button {
     box-sizing: border-box;
     display: inline-block;
