--- a/src/app/view/reportuser/reportuser.component.html
+++ b/src/app/view/reportuser/reportuser.component.html
@@ -26,9 +26,9 @@
             <td class="small-name"> {{ users.email }} </td>
             <td class="small-cell">
               <select [(ngModel)]="users.role" (change)="onRoleChange(users)">
-                <option value="user">User</option>
-                <option value="admin">Admin</option>
-                <option value="superadmin">Superadmin</option>
+                <option value="user">user</option>
+                <option value="admin">admin</option>
+                <option value="superadmin">superadmin</option>
               </select>
               <!-- {{ users.role }} -->
             </td>
