--- a/src/assets/scss/core/_footers.scss
+++ b/src/assets/scss/core/_footers.scss
@@ -3,6 +3,7 @@
     text-align: center;
     display: -webkit-flex; /* Safari */ /* Safari 6.1+ */
     display: flex;
+    background: white;/*petch add*/
 
     ul{
         margin-bottom: 0;
