--- a/src/app/view/dashboard/dashboard.component.html
+++ b/src/app/view/dashboard/dashboard.component.html
@@ -103,9 +103,9 @@
           <app-map></app-map>
         </div>
         <div class="col-sm-8">
-          <canvas id="myLineChart">
+          <!-- <canvas id="myLineChart">
 
-          </canvas>
+          </canvas> -->
         </div>
       </div>
     </div>
