--- a/src/app/view/manageuser/profileuser/profileuser.component.css
+++ b/src/app/view/manageuser/profileuser/profileuser.component.css
@@ -37,9 +37,9 @@
   font-size: 18px;
 }
 
-/* 7. Add padding to .card-body */
 .card-body {
-  padding: 20px;
+  padding: 50px 40px 20px 40px !important;
+
 }
 
 /* 8. Add bottom padding to .form-group */
@@ -59,7 +59,9 @@
   font-size: 18px;
   padding: 15px 30px;
 }
-
+i{
+  cursor: pointer;
+}
 /*userInfo*/
 .title{
   padding: 10px;
@@ -69,6 +71,9 @@
   margin-bottom: 10px;
   border-radius: 5px;
   border: 1px solid #000000;
+}
+.Info-text{
+  padding: 0.4375em 0;
 }
 .userContect{
   border-radius: 5px;
@@ -88,13 +93,6 @@
 }
 ::placeholder{
   font-family: 'Sarabun',sans-serif;
-}
-
-:host ::ng-deep .table.dataTable>thead .sorting:before, table.dataTable>thead .sorting_asc:before, table.dataTable>thead .sorting_desc:before, table.dataTable>thead .sorting_asc_disabled:before, table.dataTable>thead .sorting_desc_disabled:before{
-  display: none;
-} 
-:host ::ng-deep .table.dataTable>thead .sorting:after, table.dataTable>thead .sorting_asc:after, table.dataTable>thead .sorting_desc:after, table.dataTable>thead .sorting_asc_disabled:after, table.dataTable>thead .sorting_desc_disabled:after{
-  display: none;
 }
 :host ::ng-deep .form-control{
   background-image: linear-gradient(to top, #000000 2px, rgba(156, 39, 176, 0) 2px), linear-gradient(to top, #d2d2d2 1px, rgba(210, 210, 210, 0) 1px);
