--- a/src/app/view/reportuser/reportuser.component.html
+++ b/src/app/view/reportuser/reportuser.component.html
@@ -11,9 +11,10 @@
           <tr>
             <th class="small-cell" style="text-align: center; width: 5%;">ลำดับ</th>
             <th class="small-name">ชื่อ</th>
-            <th class="small-name">นามสกุล</th>
             <th class="small-name">อีเมล</th>
-            <th class="small-cell">ระดับผู้ใช้งาน</th>
+            <th class="small-name">ระดับผู้ใช้งาน</th>
+            <th class="small-cell">วันที่เข้าใช้งาน</th>
+            <th class="small-cell">เวลาที่เข้าใช้งาน</th>
             <th class="small-cell" style="color: black;  font-size: 16px; text-align: center;"><i
                 class="fa fa-gear"></i></th>
           </tr>
@@ -22,16 +23,11 @@
           <tr *ngFor="let users of user ; let i = index">
             <td class="small-cell" style="text-align: center; width: 5%;">{{ i + 1 }}</td>
             <td class="small-name"> {{ users.firstname }} </td>
-            <td class="small-name"> {{ users.lastname }} </td>
             <td class="small-name"> {{ users.email }} </td>
-            <td class="small-cell">
-              <select [(ngModel)]="users.role" (change)="onRoleChange(users)">
-                <option value="user">user</option>
-                <option value="admin">admin</option>
-                <option value="superadmin">superadmin</option>
-              </select>
-              <!-- {{ users.role }} -->
-            </td>
+            <td class="small-name"> {{ users.role }} </td>
+            <td class="small-name"> {{ users.role }} </td>
+            <td class="small-name"> {{ users.role }} </td>
+            
             <td class="small-cell-text">
             <button (click)="getUserReportProfile(users.id)" style="border: none; background: none; color: black; text-align: center;" >
               <i data-toggle="tooltip" title="ดูรายละเอียด" data-placement="top"
