--- a/src/app/view/reportuser/reportuserbuild/reportuserbuild.component.html
+++ b/src/app/view/reportuser/reportuserbuild/reportuserbuild.component.html
@@ -11,9 +11,11 @@
   
             <tr>
               <th class="small-cell" style="text-align: center; width: 5%;">ลำดับ</th>
+              <th class="small-name">หัวข้อการสร้าง</th>
               <th class="small-name">ชื่อ</th>
               <th class="small-name">นามสกุล</th>
-              <th class="small-name">อีเมล</th>
+              <th class="small-name">วันที่ส้ราง</th>
+              <th class="small-name">เวลาที่สร้าง</th>
               <!-- <th class="small-cell">ตำเเหน่ง</th> -->
               <th class="small-cell" style="color: black;  font-size: 16px; text-align: center;"><i
                   class="fa fa-gear"></i></th>
@@ -24,6 +26,8 @@
               <td class="small-cell" style="text-align: center; width: 5%;">{{ i + 1 }}</td>
               <td class="small-name"> {{ users.firstname }} </td>
               <td class="small-name"> {{ users.lastname }} </td>
+              <td class="small-name"> {{ users.email }} </td>
+              <td class="small-name"> {{ users.email }} </td>
               <td class="small-name"> {{ users.email }} </td>
               <!-- <td class="small-cell"> {{ users.role }} </td> -->
               <td class="small-cell-text">
