--- a/src/app/view/reportuser/reportuserbuild/reportuserbuild.component.html
+++ b/src/app/view/reportuser/reportuserbuild/reportuserbuild.component.html
@@ -22,13 +22,13 @@
             </tr>
           </thead>
           <tbody>
-            <tr *ngFor="let users of user ; let i = index">
+            <tr *ngFor="let record of user ; let i = index">
               <td class="small-cell" style="text-align: center; width: 5%;">{{ i + 1 }}</td>
-              <td class="small-name"> {{ users.firstname }} </td>
-              <td class="small-name"> {{ users.lastname }} </td>
-              <td class="small-name"> {{ users.email }} </td>
-              <td class="small-name"> {{ users.email }} </td>
-              <td class="small-name"> {{ users.email }} </td>
+              <td class="small-name"> {{ record.record_topic }} </td>
+              <td class="small-name"> {{ record.user?.firstname|| 'N/A'  }} </td>
+              <td class="small-name"> {{ record.user?.lastname|| 'N/A'   }} </td>
+              <td class="small-name"> {{ record.createdDate }} </td>
+              <td class="small-name"> {{ record.createdTime }} </td>
               <!-- <td class="small-cell"> {{ users.role }} </td> -->
               <td class="small-cell-text">
               <button (click)="getUserReportProfile(users.id)" style="border: none; background: none; color: black; text-align: center;" >
