--- a/src/app/view/manageuser/manageuser.component.html
+++ b/src/app/view/manageuser/manageuser.component.html
@@ -14,8 +14,8 @@
             <th class="small-name">นามสกุล</th>
             <th class="small-name">อีเมล</th>
             <th class="small-cell">ระดับผู้ใช้งาน</th>
-            <!-- <th class="small-cell" style="color: black;  font-size: 16px; text-align: center;"><i
-                class="fa fa-gear"></i></th> -->
+            <th class="small-cell" style="color: black;  font-size: 16px; text-align: center;"><i
+                class="fa fa-gear"></i></th>
           </tr>
         </thead>
         <tbody>
@@ -32,12 +32,12 @@
               </select>
               <!-- {{ users.role }} -->
             </td>
-            <!-- <td class="small-cell-text"> -->
-            <!-- <button (click)="getUserReportProfile(users.id)" style="border: none; background: none; color: black; text-align: center;" >
+             <td class="small-cell-text"> 
+            <button (click)="getUserReportProfile(users.id)" style="border: none; background: none; color: black; text-align: center;" >
               <i data-toggle="tooltip" title="ดูรายละเอียด" data-placement="top"
                 class="fa fa-file-text-o ModalIcon "></i>
             </button>
-          </td>  -->
+          </td>  
             </tr>
           </tbody>
       </table>
