--- a/src/app/components/navbar/navbar.component.html
+++ b/src/app/components/navbar/navbar.component.html
@@ -9,13 +9,18 @@
             <span class="navbar-toggler-icon icon-bar"></span>
         </button>
         <div class="collapse navbar-collapse justify-content-end" id="navigation">
+            <a class="worning">
+                <i class="material-icons">notifications</i>
+                <span class="notification-edit">5</span>
+            </a>
             <div class="dropdown">
+             
                 <div class="Profile" (click)="toggleDropdown($event)">
                     <img [src]="profileImgUrl" alt="img not fond" style="border-radius: 15px; border: 1 solid black; height: 32px; width: 32px;">
                 </div>
                 <div class="dropdown-menu"  [class.show]="dropdownOpen">
                     <a class="nav-link"  (click)="openProfile()"><i class="fa fa-user"></i> &nbsp;จัดการผู้ใช้</a>
-                    <a class="nav-link"  ><i class="fa fa-gear"></i> &nbsp; ตั้งค่า</a>
+                    <a class="nav-link"   aria-disabled="true"><i class="fa fa-gear"></i> &nbsp; ตั้งค่า</a>
                     <a class="nav-link"  (click)="openLogin()"> <i class="fa fa-sign-out"></i> &nbsp;ออกจากระบบ</a>
                 </div>
             </div>
