--- a/src/app/view/map/map.component.html
+++ b/src/app/view/map/map.component.html
@@ -1,4 +1,8 @@
 <div class="mapBG">
+    <div class="title">
+        <h4 >พื้นที่ตรวจสอบ</h4>
+    </div>
+    
     <div id="map"></div>
 </div>
 
