--- a/src/app/view/thaicounty/thaicounty.component.css
+++ b/src/app/view/thaicounty/thaicounty.component.css
@@ -1,12 +1,12 @@
 .card {
   border: 1px solid #ddd;
-  border-radius: 4px;
+  border-radius: 10px;
   box-shadow: 0 2px 4px rgba(0, 0, 0, 0.1);
   bottom: -50px;
 }
 .card-header{
   position: relative;
-  background-color: rgb(255, 209, 0);
+  background-color: transparent;
 }
 
 .main-content{
