--- a/src/app/view/thaicounty/thaicounty.component.html
+++ b/src/app/view/thaicounty/thaicounty.component.html
@@ -1,10 +1,15 @@
 
   <div class="card">
-    <div class="card-header card-header-danger">
+    <!-- <div class="card-header card-header-danger">
       <h4 class="card-title">
         การลงรายเซ็นต์
       </h4>
       
+    </div> -->
+    <div class="card-header" style="border-radius: 10px 10px 0 0;">
+      <h4 class="card-title" style="font-weight: 900;">
+     รายงานการใช้เอกสาร
+      </h4>
     </div>
 
 
@@ -13,8 +18,8 @@
         <thead>
           <tr>
             <th>จังหวัด</th>
-            <th>จำนวนที่เซ็นเเล้ว(ครั้ง)</th>
-            <th>จำนวนที่ยังไม่ได้เซ็น(ครั้ง)</th>
+            <th>จำนวนเอกสาร</th>
+            <th>จำนวนเอกสารที่ถูกเซ็น</th>
               
             <th>เปอร์เซ็นต์</th>
           </tr>
