--- a/src/app/components/navbar/navbar.component.css
+++ b/src/app/components/navbar/navbar.component.css
@@ -1,5 +1,7 @@
 .Profile img{
     cursor: pointer;
+    
+    margin: 0 20px;
 }
 .Profile img:hover{
     border: 2px solid rgb(0, 198, 0);
@@ -19,4 +21,22 @@
     opacity: 1;
     transform: scale(1);
     font-family: 'Sarabun',sans-serif;
+}
+
+.notification-edit{
+    position: absolute;
+    top: 7px;
+    border: 1px solid #FFF;
+    right: 80px;
+    font-size: 9px;
+    background: #f44336;
+    color: #FFFFFF;
+    min-width: 20px;
+    padding: 0px 5px;
+    height: 20px;
+    border-radius: 10px;
+    text-align: center;
+    line-height: 19px;
+
+    display: block;
 }
