--- a/src/app/view/dashboard/dashboard.component.css
+++ b/src/app/view/dashboard/dashboard.component.css
@@ -20,7 +20,10 @@
   justify-content: center;
   margin-bottom: 20px;
 }
-
+h4{
+  font-family: 'Sarabun',sans-serif;
+  font-weight: 900;
+}
 .province-label {
   font-size: 18px;
   margin-right: 10px;
@@ -36,23 +39,149 @@
   background-image: linear-gradient(to top, #000000 2px, rgba(156, 39, 176, 0) 2px), linear-gradient(to top, #d2d2d2 1px, rgba(210, 210, 210, 0) 1px);
 }
 
-.number {
-  height: 50px;
-  font-size: 30px;
-  font-weight: 500;
-}
-.nameCount{
-  font-size: 16px;
-}
 
-/* fitter*/
+
+/* fitter and drop Down*/
 .filter-container {
   position: relative;
+  display: flex;
+  align-items: center;
+  padding: 10px;
+  background-color:white !important;
+  width: 100%;
+  height: 150px;
+  border-radius: 10px;
+  margin-left: 0;
+  transform: 0.3s ease-in;
 }
+/* dropDown */
+.dropdown {
+  position: relative;
+  display: inline-block;
+  cursor: pointer;
+}
+.filter-box{
+  display: flex;
+  width: 150px;
+  align-items: center;
+  justify-content: space-between;
+  padding: 10px;
+  border-radius: 5px;
+  border: 1px solid black;
+  overflow: hidden;
+}
+.fa {
+  transition: transform 0.3s ease;
+}
+
+.animate {
+  transition: transform 0.3s ease;
+  transform: rotate(180deg);
+}
+.dropdown-content {
+  display: none;
+  position: absolute;
+  padding: 10px;
+  margin-top: 5px;
+  background-color: #ffffff;
+  min-width: 200px;
+  max-height: 0px;
+  box-shadow: 0px 8px 16px 0px rgba(0,0,0,0.2);
+  transition: max-height 0.4s ease, opacity 0.4s ease;
+  align-items: center;
+  font-family: 'Sarabun',sans-serif;
+
+  opacity: 0;
+
+}
+.dropdown-scroller{
+  overflow-y:scroll;
+  min-width: 200px;
+}
+label{
+  margin: 0;
+}
+.dropdown-content.show {
+  display: flex;
+  flex-direction: column;
+  align-items: center;
+  border-radius: 10px;
+  max-height: 450px;
+  opacity: 1;
+  z-index: 10;
+}
+
+.dropdown-scroller::-webkit-scrollbar {
+  z-index: 10;
+ /* display: none; */
+ visibility: hidden;
+} 
+/* .dropdown-content {
+  -ms-overflow-style: none;  
+  scrollbar-width: none;     
+} */
+
+.dropdown-item {
+  display: flex;
+  align-items: center;
+  padding: 10px;
+}
+.dropdown-item input[type="checkbox"] {
+  margin-right: 10px; 
+  height: 20px;
+  width: 20px;
+}
+
+.dropdown-item label {
+  display: inline-block;
+  width: 100%; 
+}
+.dropdown-item:hover{
+  border-radius: 5px;
+  cursor: none;
+}
+.dropdown-item:active{
+  border-radius: 5px;
+  background: rgba(54, 162, 235, 0.2);
+}
+
+
+
+/* .custom-date-input {
+  -webkit-appearance: none; 
+  -moz-appearance: none;     
+  background-color: #fff;
+  border: 1px solid #ccc;
+  border-radius: 4px;
+  padding: 5px 10px;
+  font-size: 14px;
+  color: #555;
+  width: calc(100% - 30px);  
+  box-sizing: border-box;
+  position: relative;
+} */
+/* .custom-date-input::-webkit-inner-spin-button,
+.custom-date-input::-webkit-calendar-picker-indicator {
+  position: absolute;
+  opacity: 0;
+  left: 60px;
+  scale: 15;
+} */
+
+.custom-date-input::placeholder {
+  color: #aaa; /* เปลี่ยนสีของ placeholder */
+}
+input[type="date"] {
+  margin-bottom: 0px;
+  padding: 0px;
+  border: 0px solid #ccc;
+  border-radius: 4px;
+}
+/* dropDown */
 .tab-filter{
   position: absolute;
   top: 10px; 
-  left: -65px; 
+  left: -79px; 
   display: flex;
   padding: 10px;
   width: 80px;
@@ -65,13 +194,13 @@
   transition: 0.3s ease-in-out;
 }
 .tab-filter:hover{
-  left: -40px;
+  left: -60px;
   z-index: 9;
 }
 
 .detail-filter{
   position: absolute;
-  background-color: rgb(255, 255, 255);
+  background-color: white;
   left:-278px;
   width: 250px;
   height: auto;
@@ -80,10 +209,10 @@
   z-index: 10;
 }
 .tab-filter.active{
-  left: 190px;
+  left: 180px;
 }
 .detail-filter.active {
-  left: -10px;
+  left: -22px;
 }
 .inputSearch{
   margin: 0px 0 0 15px;
@@ -126,6 +255,7 @@
   display: flex;
   justify-content: flex-end;
   padding: 5px;
+  width: 100%;
 }
 .apply-filter{
   position: relative;
@@ -165,10 +295,143 @@
   background-color: #ffe4e0;
     border: 1px solid #db1900 ;
 }
-
+.imgBG{
+ 
+  display: flex;
+  width: 90px;
+  height: 90px;
+  align-items: center;
+  justify-content: center;
+  background: rgb(255,209,0);
+  border-radius: 10px;
+}
+img{
+width: 32px;
+height: 32px;
+}
+/*chart zone*/
+.BGchart{
+  background: white;
+  border-radius: 10px ;
+  padding: 30px;
+}
 canvas {
   max-width: 100%;
 }
+.pagination-chart{
+display: flex;
+justify-content: flex-end;
+}
+.pagination-chart button{
+  border: transparent;
+  background-color: transparent;
+  border-radius: 10px;
+  margin: 0 5px;
+}
+/*chart*/
+
+
+
+.card .amount {
+  font-size: 2.5rem;
+  font-weight: bold;
+  color: #000e1c;
+}
+.nameCount{
+  font-size: 16px;
+}
+
+.BoxTotal {
+  position: relative;
+  width: 100%;
+  /* margin-top: 20px; */
+  /* background-color: rgb(255, 209, 0); */
+}
+
+.cardIcon{
+  display: flex;
+  align-items: center;
+  background: rgba(255, 209, 0, 0.2);
+  border: 1px solid  rgb(255, 209, 0);
+  justify-content: center;
+  width: 50px;
+  height: 50px;
+  border-radius: 25px
+}
+
+/* .Box1 {
+  background-color: #f8f9fa;
+}
+
+.Box2 {
+  background-color: #e9ecef;
+}
+
+.Box3 {
+  background-color: #f8f9fa;
+}
+
+.Box4 {
+  background-color: #e9ecef;
+} */
+.Box1, .Box2, .Box3, .Box4 {
+  width: auto;
+  height: 151px;
+  border-radius: 10px;
+  /* background-color: rgb(255, 209, 0); */
+}  
+
+
+.card-box {
+  position: relative;
+  margin-top: 10px;
+  padding: 0 10px 0 10px;
+}
+
+.card-header {
+  position: relative;
+  background-color: rgb(255, 209, 0);
+}
+
+.card-title {
+  font-family: "Sarabun", sans-serif;
+  font-size: 16px;
+  border-radius: 3px;
+  margin-top: -20px;
+  padding: 15px;
+  background-color: rgb(255, 209, 0);
+  box-shadow: 0 4px 20px 0px rgba(0, 0, 0, 0.14), 0 7px 10px -5px rgba(255, 209, 0, 0.4);
+}
+.header {
+  display: flex;
+  align-items: center;
+  margin-bottom: 20px; /* เพิ่มช่องว่างด้านล่าง */
+}
+
+.province-label {
+  font-size: 1.2rem;
+  margin-bottom: 10px;
+}
+
+.province-select {
+  width: 200px;
+  padding: 10px;
+  font-size: 1rem;
+}
+:host ::ng-deep .btn-add{
+  color: #fff;
+  background-color: #24a0ed;/*#000dc2ef  */
+  border-color: #24a0ed85;;
+  /* box-shadow: 0 2px 2px 0 #0d6efd, 0 3px 1px -2px #0d6efd, 0 1px 5px 0 #0d6efd; */
+  font-family: 'Sarabun', sans-serif;
+
+}
+:host ::ng-deep .btn-add:hover{
+  background-color: #24a0ed; 
+  border-color: #00087c9f;
+  /* box-shadow: 0 14px 14px -12px #24a0ed51, 0 4px 14px 0px rgba(0, 0, 0, 0.12), 0 8px 10px -5px #24a0ed51; */
+}
+
 :host ::ng-deep .dataTables_wrapper .dataTables_paginate .paginate_button {
   box-sizing: border-box;
   display: inline-block;
@@ -220,68 +483,16 @@ canvas {
   box-shadow: 0 4px 20px 0px rgba(0, 0, 0, 0.14), 0 7px 10px -5px rgba(244, 244, 54, 0.4);
   opacity: 1;
 }
-
-.BoxTotal {
-  position: relative;
- 
-  /* background-color: rgb(255, 209, 0); */
-}
-
-.Box1, .Box2, .Box3 ,.Box4 {
-  width: auto;
-  height: 151px;
-  /* background-color: rgb(255, 209, 0); */
-}  
-.Box1{
-border-radius: 5px 0 5px 0px;
-}
-.Box4{
-border-radius: 0px 5px 0px 5px;
-}
-.Box2, .Box3{
-  border-radius: 0;
-}
-
-.card-box {
-  position: relative;
-  margin-top: 10px;
-  padding: 0 10px 0 10px;
-}
-
-.card-header {
-  position: relative;
-  background-color: rgb(255, 209, 0);
-}
-
-.card-title {
-  font-family: "Sarabun", sans-serif;
-  font-size: 16px;
-  border-radius: 3px;
-  margin-top: -20px;
-  padding: 15px;
-  background-color: rgb(255, 209, 0);
-  box-shadow: 0 4px 20px 0px rgba(0, 0, 0, 0.14), 0 7px 10px -5px rgba(255, 209, 0, 0.4);
-}
-.header {
-  display: flex;
-  align-items: center;
-  margin-bottom: 20px; /* เพิ่มช่องว่างด้านล่าง */
-}
-
-.province-label {
-  font-size: 1.2rem;
-  margin-bottom: 10px;
-}
-
-.province-select {
-  width: 200px;
-  padding: 10px;
-  font-size: 1rem;
-}
-
 :host ::ng-deep .table.dataTable>thead .sorting:before, table.dataTable>thead .sorting_asc:before, table.dataTable>thead .sorting_desc:before, table.dataTable>thead .sorting_asc_disabled:before, table.dataTable>thead .sorting_desc_disabled:before{
   display: none;
 } 
 :host ::ng-deep .table.dataTable>thead .sorting:after, table.dataTable>thead .sorting_asc:after, table.dataTable>thead .sorting_desc:after, table.dataTable>thead .sorting_asc_disabled:after, table.dataTable>thead .sorting_desc_disabled:after{
   display: none;
+}
+
+@media (max-width: 770px){
+  .filter-container{
+    height: auto;
+  }
+
 }
