--- a/src/app/view/dashboard/dashboard.component.html
+++ b/src/app/view/dashboard/dashboard.component.html
@@ -1,18 +1,7 @@
 <!-- <div *ngIf="isSuperAdmin"> -->
 <div class="dashboard">
 
-  <!-- <div class="header">
-    <label for="province" class="province-label">เลือกจังหวัด:</label>
-    <select id="province" class="province-select form-control" [(ngModel)]="selectedProvince" (change)="onProvinceChange($event)">
-        <option value="">เลือกทั้งหมด</option>
-        <option *ngFor="let province of provinces" [value]="province.name">{{ province.name }}</option>
-    </select>
-</div>
-
-<div *ngIf="provinces.length === 0">
-    <p>ยังไม่มีข้อมูลจังหวัด</p>
-</div> -->
-  <div class="filter-container">
+  <!-- <div class="filter-container">
     <div class="tab-filter" (click)="DetailFilterShow()" [ngClass]="{'active': isFilterActive}">
       <i class="fa fa-chevron-right" style="color: white; transition: 0.3s ease;" *ngIf="!isFilterActive"></i>
       <i class="fa fa-chevron-left" style="color: white;" *ngIf="isFilterActive"></i>
@@ -39,81 +28,196 @@
       </div>
 
     </div>
-  </div>
+  </div> -->
 
 
 
   <div class="global-sales">
-    <div class="BoxTotal row">
-      <div class="col-sm-3" style="padding:0 3px 0 0 ;">
-        <div class="Box1 card">
-          <div class="card-body">
-            <a style="font-size: 18px;">เอกสารทั้งหมด</a>
+    <div class="BoxTotal" style="padding: 0 ; ">
+
+      <div class="row">
+        <!-- <div class="filter-container"> -->
+          <div class="row col-sm-12 filter-container">
+
+            <div class="row col-md-12">
+              <div class="col-md-2">
+                <h4>กรองข้อมูล</h4>
+                <div class="dropdown">
+                  <div class="filter-box" (click)="toggleDropdown('province')">
+                    เลือกจังหวัด
+                    <span class="fa fa-chevron-down" [class.animate]="isProvinceDropdownOpen"
+                      *ngIf="isProvinceDropdownOpen"></span>
+                    <span class="fa fa-chevron-up" [class.animate]="!isProvinceDropdownOpen"
+                      *ngIf="!isProvinceDropdownOpen"></span>
+                  </div>
+                  <div class="dropdown-content" [class.show]="isProvinceDropdownOpen">
+                    <div class="search">
+                      <input class="form-control form-control-sm inputSearch" type="text" placeholder="ค้นหา..."
+                        (input)="onSearch($event)">
+                    </div>
+                    <div class="dropdown-scroller">
+                      <div class="dropdown-item">
+                        <input type="checkbox" id="select-all" (change)="onSelectAll($event)">
+                        &nbsp;<label for="select-all">ทั้งหมด</label>
+                      </div>
+                      <div class="dropdown-item" *ngFor="let province of filteredProvinces">
+                        <input type="checkbox" [id]="province.id" [value]="province.id" (change)="onProvinceSelect($event)"
+                          [checked]="province.selected">
+                        &nbsp;<label [for]="province.id">{{ province.name_th }}</label>
+                      </div>
+                    </div>
+  
+             
+                    <div class="button-inline">
+                      <button class="apply-filter" (click)="applyFilter()">ยืนยัน</button>
+                      <button class="clear-filter" (click)=" clearFilter()">ล้าง</button>
+                    </div>
+                  </div>
+                </div>
+              </div>
+  
+              <div class="col-md-2">
+                <h4>เริ่มต้นวันที่</h4>
+                <div class="filter-box" (click)="toggleDropdown('date')">
+                  <input type="date" [(ngModel)]="startDate" (change)="onDateChange()" placeholder="เริ่มต้นวันที่"
+                   >
+                </div>
+              </div>
+              <div class="col-md-2">
+                <h4>สิ้นสุด</h4>
+                <div class="filter-box">
+                  <input type="date" [(ngModel)]="endDate">
+                </div>
+              </div>
+              <div class="col-md-2 align-self-end">
+                <button type="submit" class="btn btn-add mt-4">
+                  ดูข้อมูล
+                </button>
+              </div>
+            </div>
+            
+
+          </div>
+
+        <!-- </div> -->
+
+      </div>
+
+
+      <div class="BoxTotal" style="padding: 0 ; ">
+        <div class="row">
+          <!-- เอกสารทั้งหมด -->
+          <div class="col-md-3" style="padding: 0 0 0;">
+            <div class="card Box1">
+              <div class="card-body">
+                <div class="d-flex justify-content-between align-items-center">
+                  <div>
+                    <p class="title mb-0">เอกสารทั้งหมด</p>
+                    <h2 class="amount">{{ recordCount }}</h2>
+                  </div>
+                  <div class="imgBG">
+                    <img src="./assets/img/manage.png" alt="paper" class="paper-img">
+                  </div>
+
+                </div>
+              </div>
+            </div>
+          </div>
+          <!-- เอกสารที่ถูกเซ็น -->
+          <div class="col-md-3" style="padding: 0 7.5px 0 15px;">
+            <div class="card Box2">
+              <div class="card-body">
+                <div class="d-flex justify-content-between align-items-center">
+                  <div>
+                    <p class="title mb-0">เอกสารที่ถูกเซ็น</p>
+                    <h2 class="amount">1,325</h2>
+                  </div>
+                  <div class="imgBG">
+                    <img src="./assets/img/contract.png" alt="paper" class="paper-img">
+                  </div>
+
+                  <!-- <canvas id="signedDocumentsChart">
+
+                 </canvas> -->
+                </div>
+              </div>
+            </div>
+          </div>
+          <!-- จำนวนกระดาษ -->
+          <div class="col-md-3" style="padding-left:7.5px ;">
+            <div class="card Box3">
+              <div class="card-body">
+                <div class="d-flex justify-content-between align-items-center">
+                  <div>
+                    <p class="title mb-0">จำนวนกระดาษ</p>
+                    <h2 class="amount">1,234</h2>
+                  </div>
+                  <div class="imgBG">
+                    <img src="./assets/img/paper.png" alt="paper" class="paper-img">
+                  </div>
+
+                </div>
+              </div>
+            </div>
+          </div>
+          <!-- จำนวนผู้ใช้งาน -->
+          <div class="col-md-3" style="padding: 0 ;">
+            <div class="card Box4">
+              <div class="card-body">
+                <div class="d-flex justify-content-between align-items-center">
+                  <div>
+                    <p class="title mb-0">จำนวนผู้ใช้งาน</p>
+                    <h2 class="amount">{{ userCount }}</h2>
+                  </div>
+                  <div class="imgBG">
+                    <img src="./assets/img/group.png" alt="paper" class="paper-img">
+                  </div>
+
+                </div>
+              </div>
+            </div>
+          </div>
+        </div>
+      </div>
+
+
+      <div class="content-dashboard">
+        <div class="row">
+          <div class="col-sm-8" style="padding-left: 0;">
             <div class="row">
+
               <div class="col-sm-12">
-                <div class="number">
-                  {{recordCount}}
+
+                <div class="BGchart">
+                  <h4>เอกสาร & ผู้ใช้งาน</h4>
+                  <canvas id="myLineChart">
+                  </canvas>
+                  <div class="pagination-chart">
+                    <button (click)="prevPage()" [disabled]="currentPage === 1"><i
+                        class="fa fa-angles-left"></i></button>
+                    <button (click)="nextPage()" [disabled]="currentPage === totalPages"><i
+                        class="fa fa-angles-right"></i></button>
+                  </div>
                 </div>
               </div>
 
-            </div>
-
-          </div>
-        </div>
-      </div>
-      <div class="col-sm-3" style="padding:0 3px 0 0 ;">
-        <div class="Box2 card">
-          <div class="card-body">
-            <a style="font-size: 18px;">เอกสารที่ถูกเซ็นแล้ว</a>
-            <div>
+              <div class="col-sm-12">
+                <app-thaicounty></app-thaicounty>
+              </div>
 
             </div>
           </div>
-        </div>
-      </div>
-      <div class="col-sm-3" style="padding:0 3px 0 0 ;">
-        <div class="Box3 card">
-          <div class="card-body">
-            <a style="font-size: 18px;">จำนวนกระดาษ</a>
-            <div>
-
-            </div>
+          <div class="col-sm-4" style="padding-right: 0;">
+            <app-map></app-map>
           </div>
+
         </div>
       </div>
 
-      <div class="col-sm-3" style="padding:0 3px 0 0 ;">
-        <div class="Box4 card">
-          <div class="card-body">
-            <a style="font-size: 18px;">จำนวนผู้ใช้</a>
-            <div>
-
-            </div>
-          </div>
-        </div>
-      </div>
-    </div>
-
-    <div class="content-dashboard">
-      <div class="row">
-        <div class="col-sm-8" style="padding-left: 0;">
-          <app-thaicounty></app-thaicounty>
-        </div>
-        <div class="col-sm-4">
-          <app-map></app-map>
-        </div>
-        <div class="col-sm-8">
-          <!-- <canvas id="myLineChart">
-
-          </canvas> -->
-        </div>
-      </div>
-    </div>
-   
- 
 
 
-    <!-- <div id="chart">
+
+      <!-- <div id="chart">
   <apx-chart
     [series]="chartOptions.series"
     [chart]="chartOptions.chart"
@@ -122,5 +226,5 @@
   ></apx-chart>
 </div> -->
 
+    </div>
   </div>
-</div>
