--- a/src/app/view/profile/profile.component.html
+++ b/src/app/view/profile/profile.component.html
@@ -51,7 +51,7 @@
                         </div>
                         <div class="col-sm-12">
                           <div class="Info-text">
-                            องค์กร/บริษัท :  {{ UserData?.employeeId.company }}
+                            องค์กร/บริษัท :  {{ UserData?.employeeId.organization }}
                           </div>
                         </div>
                         <div class="col-sm-12">
@@ -132,7 +132,7 @@
                           </div>
                           <div class="col-sm-12">
                             <mat-form-field>
-                              <input matInput placeholder="บริษัท/องค์กร" formControlName="company" type="text">
+                              <input matInput placeholder="บริษัท/องค์กร" formControlName=" organization" type="text">
                             </mat-form-field>
                           </div>
                           <div class="col-sm-12">
