--- a/src/styles.css
+++ b/src/styles.css
@@ -17,4 +17,4 @@
   }
 
 html, body { height: 100%; }
-body { margin: 0; font-family: Roboto, "Helvetica Neue", sans-serif; }
+body { margin: 0; font-family:'Sarabun', sans-serif; }
