--- a/src/app/view/reportuser/reportuserbuild/reportuserbuild.component.html
+++ b/src/app/view/reportuser/reportuserbuild/reportuserbuild.component.html
@@ -3,7 +3,7 @@
     <div class="card">
       <div class="card-header card-header-danger">
         <h4 class="card-title">  รายงานผู้ใช้งานระบบ</h4>
-      
+        <button (click)="exportToExcel()" class="btn btn-primary" style="float: right;">Export to Excel</button>
       </div>
       <div class="card-body">
         <table width="100%" datatable [dtOptions]="dtOptions" class="table table-striped table-bordered" *ngIf="!loading">
