--- a/src/app/view/table-main/table-main.component.html
+++ b/src/app/view/table-main/table-main.component.html
@@ -48,7 +48,7 @@
                       ครั้งที่</th>
                     <th style="color: black;  font-size: 16px;">หัวข้อการตรวจสอบ</th>
                     <th style="width: 9%; color: black; font-size: 16px;">วันที่เริ่มตรวจสอบ</th>
-                    <th style="width: 5%; color: black;  font-size: 16px;">ผู้สร้างเอกสาร</th>
+                    <!-- <th style="width: 5%; color: black;  font-size: 16px;">ผู้สร้างเอกสาร</th> -->
                     
                     <th style="width: 5%; color: black;  font-size: 16px;">สถานที่</th>        
                     <th style="width: 5%; color: black;  font-size: 16px; text-align: center;">สถานะ</th>
@@ -72,10 +72,10 @@
 
                       {{item?.record_star_date | thaidate: "medium"}}
                     </td>
-                    <td style=" white-space: nowrap; ">
+                    <!-- <td style=" white-space: nowrap; ">
 
-                      {{item?.userId}}
-                    </td>
+                      {{item?.firstname}}
+                    </td> -->
 
                     <td class="text-center" style=" white-space: nowrap;">
                       <!-- {{item.record_location}} -->
